[package]
name = "quote2opportunity"
version = "0.1.0"
edition = "2021"
description = "Use Quote Notificaiton to update Sales Opportunity"

[features]
opentel = []

[dependencies]
actix-web = "4.5.1"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.200", features = ["derive"]}
serde_json = "1.0.116"
tmflib = { git = "https://github.com/rruckley/tmflib.git"}
tmf-client = { git = "https://github.com/rruckley/tmf-client"}